[#11] changes